<resources>
    <string name="app_name">SEP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SEP</string>
    <string name="nav_header_subtitle">Sensor and Room Management Tool</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="admin_home">Admin Dashboard</string>
    <string name="manage_rooms">Manage Rooms</string>
    <string name="add_room">Add Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="edit_room">Edit Room</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_alert">Emergency Alert!</string>
    <string name="room1">Room 1</string>
    <string name="room2">Room 2</string>
    <string name="room3">Room 3</string>
    <string name="alert_management">Alert Management</string>
    <string name="register">Register</string>
    <string name="user_s_list">User\'s List</string>
    <string name="sign_in_register">SIGN IN</string>
    <string name="user_no_1">User No.1</string>
    <string name="user_no_2">User No. 2</string>
    <string name="user_no_3">User No. 3</string>
    <string name="manage_users">Manage Users</string>
    <string name="delete_user_s">Delete User(s)</string>
    <string name="alerts">Alerts:</string>
    <string name="alert_no_1">Alert No. 1</string>
    <string name="alert_no_2">Alert No. 2</string>
    <string name="alert_no_3">Alert No. 3</string>
    <string name="confirm">Confirm</string>
    <string name="user_s_details">User\'s details:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="contact_information">Contact information:</string>
    <string name="save">Save</string>
    <string name="new_username">New username</string>
    <string name="new_password">New Password</string>
    <string name="new_contact_information">New Contact Information</string>
</resources>
