<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.sep.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_manageRoomAdminFragment"
            app:destination="@id/manageRoomAdminFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.github.sep.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.github.sep.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/manageRoomAdminFragment"
        android:name="com.github.sep.ui.manageRoom.ManageRoomAdminFragment"
        android:label="Manage Rooms"
        tools:layout="@layout/manage_room_admin_fragment" >
        <action
            android:id="@+id/action_manageRoomAdminFragment_to_createRoomFragment"
            app:destination="@id/createRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/createRoomFragment"
        android:name="com.github.sep.CreateRoomFragment"
        android:label="create_room_fragment"
        tools:layout="@layout/create_room_fragment" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.github.sep.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.github.sep.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
</navigation>